fixed spare whitespace issue in css with overflow hidden property

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,9 +33,10 @@ body {
 .flip-container {
   perspective: 1000px;
   margin: 0 auto;
-  /*height: 100vh;*/
-  width: 100vh;
+  height: 100vh;
+  width: 56vw;
   position: relative;
+  overflow: hidden;
 }
 
 .flip-cards {
